# Secure-Message-System

./: .env.example  .gitignore  README.md  SECURITY_REVIEW.md  docker-compose.yml
backend/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.cpp  Docs.html  OpenApiSpec.json  Program.cs  README.md  SecureMessageBackend.csproj
backend/Controllers/: AuthController.cs  ContactsController.cs  MessagesController.cs
backend/Middleware/: BodySizeLimitMiddleware.cs  CorsMiddleware.cs  RateLimitMiddleware.cs  SecurityHeadersMiddleware.cs
backend/Models/: Constants.cs  DbContact.cs  DbMessage.cs  DbUser.cs  Requests.cs  Responses.cs
backend/Repositories/: ContactRepository.cs  MessageRepository.cs  UserRepository.cs
backend/Services/: DatabaseService.cs  PasswordService.cs  RateLimiterService.cs  TokenService.cs
backend/src/: main.cpp
cli/: README.md  requirements.txt  secure_message_cli.py  tui_app.py
cli/tests/: test_api.py  test_cli_admin.py  test_cli_attachments.py  test_cli_contacts.py  test_e2e.py  test_history_formatting.py  test_tui_app.py  test_tui_auth.py
frontend/: 123.bat  index.html  package-lock.json  package.json
frontend/src/: App.tsx  router.tsx
frontend/src/api/: admin.ts  auth.ts  client.ts  contacts.ts  messages.ts
frontend/src/components/: ChatWindow.tsx  ContactList.tsx  MessageComposer.tsx
frontend/src/crypto/: attachments.ts  base64.ts  keys.ts  messages.ts  storage.ts
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx
frontend/src/store/: authStore.ts  chatStore.ts
frontend/src/styles/: app.css
frontend/src/types/: auth.ts  contact.ts  message.ts
frontend/src/utils/: time.ts
